implementa /produtos-recomendados/:perfil