@@ -1,26 +1,26 @@
 package org.pablofsc.service;
 
-import io.quarkus.panache.common.Sort;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import org.pablofsc.domain.entity.ProdutoEntity;
+import org.pablofsc.domain.model.PerfilCliente;
 import org.pablofsc.domain.response.ProdutoRecomendadoResponse;
-import org.pablofsc.repository.ProdutoRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class ProdutoRecomendadoService {
 
   @Inject
-  ProdutoRepository repository;
+  MotorRecomendacaoService motorRecomendacao;
 
-  public List<ProdutoRecomendadoResponse> obterProdutosRecomendados(String perfil) {
-    List<ProdutoEntity> produtos = repository.listAll(Sort.by("id").ascending());
-    return produtos.stream()
+  /**
+   * Retorna produtos recomendados para um perfil, usando o motor de recomendação
+   */
+  public List<ProdutoRecomendadoResponse> obterProdutosRecomendados(PerfilCliente perfil) {
+    return motorRecomendacao.obterProdutosPorPerfil(perfil).stream()
         .map(this::toResponse)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private ProdutoRecomendadoResponse toResponse(ProdutoEntity entity) {
